Adding descriptionrs for every public function
